# TwinCAN

./: 1.dbc  2.dbc  Cargo.toml  README.md  app.rc  build.rs  dbc_comparison.csv  output.csv
examples/: 2.dbc
output/: dbc_comparison.csv
src/: main.rs  rs_dbc.rs
ui/: main.slint
