[package]
name = "TwinCAN"
version = "1.0.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
rfd = "0.15.3"
strsim = "0.11.1"
rs_dbc = "0.10.0"

[build-dependencies]
slint-build = "1.12.1"
embed-resource = "3.0.5"
